--- a/style.css
+++ b/style.css
@@ -2,3 +2,143 @@
   margin: 0;
   padding: 0;
 }
+:root {
+  --profile-img: #faedcd;
+  --first-profile-img: #e9edc9;
+  --secound-profile-img: #ccd5ae;
+  --thired-profile-img: #ddbea9;
+}
+.main-page {
+  height: 100dvh;
+  display: grid;
+  grid-template-columns: 1fr 4fr;
+}
+.header {
+  display: flex;
+  align-items: center;
+  grid-column-start: 1;
+  background-color: rgb(227, 218, 218);
+  grid-column-end: 3;
+  padding-left: 15px;
+  padding-right: 15px;
+  box-shadow: 0 10px 10px rgba(94, 94, 94, 0.5);
+  flex-wrap: wrap;
+}
+.sidebar {
+  background-color: aqua;
+  grid-row-start: 1;
+  grid-row-end: 3;
+}
+.profile {
+  display: flex;
+  align-items: center;
+  gap: 15px;
+  left: 0;
+}
+#plus {
+  height: 30px;
+}
+.profile-image {
+  display: flex;
+  align-items: center;
+  background-color: var(--profile-img);
+  border-radius: 50%;
+  overflow: hidden;
+  width: 60px;
+  height: 60px;
+  align-items: center;
+  justify-content: center;
+}
+.profile-image img {
+  width: 80%; /* Ensure the image fills the circular container */
+  height: 80%;
+  object-fit: cover; /* Maintain the image's aspect ratio and cover the container */
+}
+#first-profile {
+  background-color: var(--first-profile-img);
+}
+#secound-profile-img {
+  background-color: var(--secound-profile-img);
+}
+#thired-profile-img {
+  background-color: var(--thired-profile-img);
+}
+.search {
+  display: flex;
+  flex-grow: 1;
+  margin-left: 30px;
+  margin-right: 30px;
+  gap: 10px;
+}
+.search > img {
+  height: 40px;
+}
+input {
+  min-width: 200px;
+  width: 100%;
+}
+.my-profile {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+.profile-image {
+  width: 80px;
+  height: auto;
+}
+
+.icones > img {
+  height: 30px;
+}
+.icones {
+  display: flex;
+  gap: 10px;
+}
+.main-contect {
+  display: grid;
+  grid-column-start: 2;
+  grid-column-end: 3;
+  grid-row-start: 1;
+  grid-row-end: 3;
+  grid-template-rows: 1.5fr 2fr 2fr 2fr 2fr;
+  grid-template-columns: 2fr 1fr;
+  border: 1px solid black;
+  padding-left: 15px;
+  padding-right: 15px;
+  background-color: aliceblue;
+}
+.cards-continer {
+  background-color: #736e6e;
+  grid-row: 3/6;
+}
+.Announcements {
+  background-color: green;
+}
+.trending {
+  background-color: red;
+  grid-row: 3/5;
+}
+.top-prfomence {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  grid-column: 1/3;
+  display: grid;
+  align-items: center;
+  justify-content: center;
+  gap: 50px;
+
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+}
+
+.cards-stats {
+  font-size: 2.2rem;
+  display: flex;
+  flex-direction: column;
+  border: 3px solid rgb(46, 45, 45);
+  border-radius: 15%;
+  align-items: center;
+  height: 150px;
+  max-width: 235px;
+  justify-content: space-evenly;
+  background-color: rgb(255, 255, 255);
+}
