--- a/style.css
+++ b/style.css
@@ -7,6 +7,10 @@
   --first-profile-img: #e9edc9;
   --secound-profile-img: #ccd5ae;
   --thired-profile-img: #ddbea9;
+  --main-contect: aliceblue;
+  --cards-container: #f7e8e8;
+  --cards-stats: rgb(255, 255, 255);
+  --header: rgb(227, 218, 218);
 }
 .main-page {
   height: 100dvh;
@@ -17,7 +21,7 @@
   display: flex;
   align-items: center;
   grid-column-start: 1;
-  background-color: rgb(227, 218, 218);
+  background-color: var(--header);
   grid-column-end: 3;
   padding-left: 15px;
   padding-right: 15px;
@@ -105,17 +109,18 @@ input {
   border: 1px solid black;
   padding-left: 15px;
   padding-right: 15px;
-  background-color: aliceblue;
+  background-color: var(--main-contect);
 }
-.cards-continer {
-  background-color: #736e6e;
-  grid-row: 3/6;
-}
+
 .Announcements {
-  background-color: green;
+  background-color: var(--cards-container);
+  border-radius: 12px;
+  margin-top: 15px;
 }
 .trending {
-  background-color: red;
+  background-color: var(--cards-container);
+  border-radius: 12px;
+
   grid-row: 3/5;
 }
 .top-prfomence {
@@ -140,5 +145,39 @@ input {
   height: 150px;
   max-width: 235px;
   justify-content: space-evenly;
-  background-color: rgb(255, 255, 255);
+  background-color: var(--cards-stats);
+}
+.cards-continer {
+  background-color: var(--cards-container);
+  grid-row: 3/6;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  align-content: start; /* Adjust row height to fit cards */
+  padding-left: 30px;
+  padding-top: 30px;
+  gap: 30px;
+  margin-right: 15px;
+  border-radius: 12px;
+}
+.cards {
+  display: flex;
+  flex-direction: column;
+  font-size: 1.3rem;
+  min-width: 222px;
+  max-width: 340px;
+  min-height: 222px;
+  max-height: 330px;
+  border-radius: 10%;
+  align-items: center;
+  gap: 15px;
+  background-color: var(--cards-stats);
+  border-left: 12px solid #f6bd60;
+  box-shadow: 5px 5px 10px rgba(87, 85, 85, 0.4);
+}
+h4 {
+}
+.cards > p {
+  width: 90%;
+  height: 100%;
+  border-radius: 15px;
 }
