--- a/style.css
+++ b/style.css
@@ -441,7 +441,7 @@ h4 {
     gap: 80px;
   }
 }
-@media screen and (min-width: 769px) and (max-width: 1024px) {
+@media screen and (min-width: 768px) and (max-width: 1024px) {
   .header {
     grid-column: 1/3;
   }
@@ -515,6 +515,15 @@ h4 {
     min-width: 200px;
     height: 100vh;
     transition: left 0.6s ease; /* Apply transition to 'left' property */
+  }
+  .sidebar-contect {
+    gap: 20px;
+  }
+  .sidebar-settings {
+    gap: 20px;
+  }
+  .sidebar-ohter {
+    gap: 20px;
   }
   .header {
     grid-column: 1/3;
